# nephara

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
config/: world.toml
docs/: getting-started.md  simulation-flow.md
scripts/: summon.sh
souls/: elara.wishes.md  kael.seed.md  lyra.seed.md  mira.seed.md  rowan.wishes.md  sael.seed.md  thane.wishes.md
src/: action.rs  agent.rs  bench.rs  config.rs  llm.rs  log.rs  magic.rs  main.rs  sim_runner.rs  soul.rs  tui.rs  tui_event.rs  world.rs
