[package]
name = "nephara"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nephara"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.12", features = ["json"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
rand         = { version = "0.8",  features = ["std_rng"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap         = { version = "4",    features = ["derive"] }
async-trait  = "0.1"
chrono       = { version = "0.4",  features = ["serde"] }
colored      = "2"
ratatui      = { version = "0.29", features = ["crossterm"] }
crossterm    = "0.28"
